--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,11 +7,11 @@
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath*:spring*.xml</param-value>
+    <param-value>classpath*:hongv-servlet.xml</param-value>
   </context-param>
   <context-param>
     <param-name>webAppRootKey</param-name>
-    <param-value>cu-api</param-value>
+    <param-value>api</param-value>
   </context-param>
   <context-param>
     <param-name>logbackConfigLocation</param-name>
@@ -29,12 +29,12 @@
   </listener>
   <!--  委托请求给Spring  -->
   <servlet>
-    <servlet-name>cu</servlet-name>
+    <servlet-name>hongv</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
-    <servlet-name>cu</servlet-name>
+    <servlet-name>hongv</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
   <!--<error-page>-->
